tests/snapshots/render/iterm2@commonmark-spec-214-link_reference_definitions.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/214-link_reference_definitions.md
snapshot_kind: text
---
]1337;SetMark\]8;;file://HOSTNAME/ROOT/url\[1m[34mFoo[0m]8;;\
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m

[90m▌ [0m[3mbar[0m
