tests/snapshots/render/iterm2@commonmark-spec-232-block_quotes.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/232-block_quotes.md
snapshot_kind: text
---
  [1m[3m[34mFoo[0m
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m

[90m▌ [0m[3mbar[0m[3m baz[0m
