tests/snapshots/render/iterm2@commonmark-spec-235-block_quotes.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/235-block_quotes.md
snapshot_kind: text
---
[90m▌ [0m• [3mfoo[0m

• bar
